Update tenant and client reference.

--- a/front-end/src/app/protected/protected.component.html
+++ b/front-end/src/app/protected/protected.component.html
@@ -1,9 +1,9 @@
 <p>
-  Welcome {{name}}
+    Welcome {{name}}
 </p>
 
-<p>
-  {{data}}
-</p>
+<div>
+    <b>{{data}}</b>
+</div>
 
 <a href="javascript:void(0);" (click)="signout();">signout</a>
